charts/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docplan-sre
  annotations:
    #ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /api/v1/
          pathType: ImplementationSpecific
          backend:
            service:
              name: php-app
              port: 
                number: 80
        - path: /api/v2/
          pathType: ImplementationSpecific
          backend:
            service:
              name: go-app
              port: 
                number: 80
